@@ -1,8 +1,14 @@
-2022-07-09  Charlie Zender  <zender@uci.edu>
+2022-07-11  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.0 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
 	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
+
+	* Flesh-out HINT for missing codec WARNING
+
+	* Prevent carrying rcd from cdc_lst_bld into filter loop
+
+2022-07-09  Charlie Zender  <zender@uci.edu>
 
 	* Rewrite nc_inq_var_filter_info() stub for old (pre-4.7.4) netCDF libraries
 
